--- a/index.html
+++ b/index.html
@@ -107,52 +107,105 @@
   
           <div class="skills">
             <h3>Core Technologies & Expertise</h3>
-            <div class="skills-grid">
-              <span class="skill-tag">Java 17</span>
-              <span class="skill-tag">Java EE</span>
-              <span class="skill-tag">Spring Boot 3.5</span>
-              <span class="skill-tag">Spring Security</span>
-              <span class="skill-tag">React 19</span>
-              <span class="skill-tag">Vue.js</span>
-              <span class="skill-tag">ReactJS</span>
-              <span class="skill-tag">TypeScript</span>
-              <span class="skill-tag">JavaScript</span>
-              <span class="skill-tag">Node.js</span>
-              <span class="skill-tag">HTML</span>
-              <span class="skill-tag">CSS</span>
-              <span class="skill-tag">Python</span>
-              <span class="skill-tag">MySQL</span>
-              <span class="skill-tag">PostgreSQL</span>
-              <span class="skill-tag">JPA/Hibernate</span>
-              <span class="skill-tag">Maven</span>
-              <span class="skill-tag">Gradle</span>
-              <span class="skill-tag">Jenkins</span>
-              <span class="skill-tag">Docker</span>
-              <span class="skill-tag">Kubernetes</span>
-              <span class="skill-tag">k9s</span>
-              <span class="skill-tag">CI/CD</span>
-              <span class="skill-tag">AWS</span>
-              <span class="skill-tag">Jira</span>
-              <span class="skill-tag">Trello</span>
-              <span class="skill-tag">IntelliJ</span>
-              <span class="skill-tag">NetBeans</span>
-              <span class="skill-tag">Eclipse</span>
-              <span class="skill-tag">Visual Studio Code</span>
-              <span class="skill-tag">Testing & Debugging</span>
-              <span class="skill-tag">Git</span>
-              <span class="skill-tag">GitHub</span>
-              <span class="skill-tag">GitLab</span>
-              <span class="skill-tag">Bitbucket</span>
-              <span class="skill-tag">RESTful APIs</span>
-              <span class="skill-tag">Microservices</span>
-              <span class="skill-tag">Data Analytics</span>
-              <span class="skill-tag">Tailwind CSS</span>
-              <span class="skill-tag">Figma</span>
-              <span class="skill-tag">Mural</span>
-              <span class="skill-tag">Scrum Master</span>
-              <span class="skill-tag">Agile Development</span>
-              <span class="skill-tag">Teams</span>
-              <span class="skill-tag">Slack</span>
+            
+            <!-- Programming Languages -->
+            <div class="skill-category">
+              <h4>Programming Languages</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">Java 17</span>
+                <span class="skill-tag">JavaScript</span>
+                <span class="skill-tag">TypeScript</span>
+                <span class="skill-tag">Python</span>
+                <span class="skill-tag">HTML</span>
+                <span class="skill-tag">CSS</span>
+              </div>
+            </div>
+
+            <!-- Frameworks & Libraries -->
+            <div class="skill-category">
+              <h4>Frameworks & Libraries</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">Spring Boot 3.5</span>
+                <span class="skill-tag">Spring Security</span>
+                <span class="skill-tag">React 19</span>
+                <span class="skill-tag">Vue.js</span>
+                <span class="skill-tag">Node.js</span>
+                <span class="skill-tag">Tailwind CSS</span>
+              </div>
+            </div>
+
+            <!-- Databases & ORM -->
+            <div class="skill-category">
+              <h4>Databases & ORM</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">PostgreSQL</span>
+                <span class="skill-tag">MySQL</span>
+                <span class="skill-tag">JPA/Hibernate</span>
+              </div>
+            </div>
+
+            <!-- DevOps & Cloud -->
+            <div class="skill-category">
+              <h4>DevOps & Cloud</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">Docker</span>
+                <span class="skill-tag">Kubernetes</span>
+                <span class="skill-tag">k9s</span>
+                <span class="skill-tag">Jenkins</span>
+                <span class="skill-tag">CI/CD</span>
+                <span class="skill-tag">AWS</span>
+              </div>
+            </div>
+
+            <!-- Build Tools & Version Control -->
+            <div class="skill-category">
+              <h4>Build Tools & Version Control</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">Maven</span>
+                <span class="skill-tag">Gradle</span>
+                <span class="skill-tag">Git</span>
+                <span class="skill-tag">GitHub</span>
+                <span class="skill-tag">GitLab</span>
+                <span class="skill-tag">Bitbucket</span>
+              </div>
+            </div>
+
+            <!-- Development Tools -->
+            <div class="skill-category">
+              <h4>Development Tools</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">IntelliJ</span>
+                <span class="skill-tag">Visual Studio Code</span>
+                <span class="skill-tag">Eclipse</span>
+                <span class="skill-tag">NetBeans</span>
+                <span class="skill-tag">Figma</span>
+                <span class="skill-tag">Testing & Debugging</span>
+              </div>
+            </div>
+
+            <!-- Project Management & Collaboration -->
+            <div class="skill-category">
+              <h4>Project Management & Collaboration</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">Scrum Master</span>
+                <span class="skill-tag">Agile Development</span>
+                <span class="skill-tag">Jira</span>
+                <span class="skill-tag">Trello</span>
+                <span class="skill-tag">Teams</span>
+                <span class="skill-tag">Slack</span>
+                <span class="skill-tag">Mural</span>
+              </div>
+            </div>
+
+            <!-- Architecture & Design -->
+            <div class="skill-category">
+              <h4>Architecture & Design</h4>
+              <div class="skills-grid">
+                <span class="skill-tag">RESTful APIs</span>
+                <span class="skill-tag">Microservices</span>
+                <span class="skill-tag">Data Analytics</span>
+                <span class="skill-tag">Java EE</span>
+              </div>
             </div>
           </div>
         </div>
