--- a/index.html
+++ b/index.html
@@ -35,29 +35,32 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-container">
+        <div class="container">
+            <header class="header">
+                <h1 class="section-title">Full-Stack Developer & Java Developer</h1>
+            </header>
             <div class="hero-content">
-                <h1 class="hero-title">Full-Stack Developer & Java Developer</h1>
-               <!-- <p class="hero-subtitle">Full-Stack Developer & Java Developer</p> -->
-                <p class="hero-description">
-                    I am a passionate Full-Stack Developer with expertise in Java and Frontend Development. 
-                    I enjoy building modern web applications using JavaScript, React, and Vue.js. 
-                    With a strong background in backend technologies like Spring Boot and Node.js, 
-                    I create efficient and scalable solutions.
-                </p>
-                <div class="hero-buttons">
-                    <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                <div class="hero-text">
+                    <p class="hero-description">
+                        I am a passionate Full-Stack Developer with expertise in Java and Frontend Development. 
+                        I enjoy building modern web applications using JavaScript, React, and Vue.js. 
+                        With a strong background in backend technologies like Spring Boot and Node.js, 
+                        I create efficient and scalable solutions.
+                    </p>
+                    <div class="hero-buttons">
+                        <a href="#projects" class="btn btn-primary">View My Work</a>
+                        <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://github.com/arifhossain" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="mailto:arif.s.hossain@outlook.com" class="social-link" target="_blank"><i class="fas fa-envelope"></i></a>
+                        <a href="tel:+46763209865" class="social-link" target="_blank"><i class="fas fa-phone"></i></a>
+                    </div>
                 </div>
-                <div class="social-links">
-                    <a href="https://github.com/arifhossain" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:arif.s.hossain@outlook.com" class="social-link" target="_blank"><i class="fas fa-envelope"></i></a>
-                    <a href="tel:+46763209865" class="social-link" target="_blank"><i class="fas fa-phone"></i></a>
+                <div class="hero-image">
+                    <img src="./arif-hossain.jpg" alt="Arif Hossain" class="profile-image">
                 </div>
-            </div>
-            <div class="hero-image">
-                <img src="./arif-hossain.jpg" alt="Arif Hossain" class="profile-image">
             </div>
         </div>
     </section>
@@ -65,7 +68,9 @@
     <!-- About Section -->
 <section id="about" class="about">
     <div class="container">
+        <header class="header">    
       <h2 class="section-title">About Me</h2>
+    </header>
       <div class="about-content">
         <div class="about-text">
           <p>
@@ -216,7 +221,9 @@
     <!-- Languages Section -->
     <section id="languages" class="languages">
         <div class="container">
-            <h2 class="section-title">Languages</h2>
+            <header class="header">
+                <h2 class="section-title">Languages</h2>
+            </header>
             <div class="languages-content">
                 <div class="language-item">
                     <div class="language-info">
@@ -243,7 +250,9 @@
     <!-- Fun Facts Section -->
     <section id="fun-facts" class="fun-facts">
         <div class="container">
-            <h2 class="section-title">Fun Facts</h2>
+            <header class="header">
+                <h2 class="section-title">Fun Facts</h2>
+            </header>
             <div class="fun-facts-content">
                 <div class="fun-fact-card">
                     <div class="fun-fact-icon">
@@ -270,7 +279,9 @@
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <h2 class="section-title">Featured Projects</h2>
+            <header class="header">
+                <h2 class="section-title">Featured Projects</h2>
+            </header>
             <div class="projects-grid" id="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
@@ -340,7 +351,9 @@
     <!-- Education Section -->
     <section id="education" class="education">
         <div class="container">
-            <h2 class="section-title">Education</h2>
+            <header class="header">
+                <h2 class="section-title">Education</h2>
+            </header>
             <div class="education-grid" id="education-grid">
                 <div class="project-card">
                     <div class="project-image">
@@ -389,7 +402,9 @@
     <!-- Experience Section -->
     <section id="experience" class="experience">
         <div class="container">
-            <h2 class="section-title">Experience</h2>
+            <header class="header">
+                <h2 class="section-title">Experience</h2>
+            </header>
             <div class="experience-grid" id="experience-grid">
                 <div class="project-card">
                     <div class="project-image">
@@ -550,7 +565,9 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
+            <header class="header">
+                <h2 class="section-title">Get In Touch</h2>
+            </header>
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Let's work together!</h3>
