--- a/index.html
+++ b/index.html
@@ -576,6 +576,7 @@
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <span>arif.s.hossain@outlook.com</span>
+                            <span>arif.hossain@svt.se</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
@@ -591,36 +592,35 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" id="contact-form">
-                    <div class="form-group">
-                        <input type="text" id="name" name="name" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" id="email" name="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" id="subject" name="subject" placeholder="Subject" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
+               
             </div>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <p>&copy; 2024 Arif Hossain. All rights reserved.</p>
-                <div class="footer-social">
-                    <a href="https://github.com/arifhossain" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:arif.s.hossain@outlook.com" class="social-link" target="_blank"><i class="fas fa-envelope"></i></a>
-                    <a href="tel:+46763209865" class="social-link" target="_blank"><i class="fas fa-phone"></i></a>
+        <div class="footer-container">
+            <div class="footer-top">
+                <div class="footer-brand">
+                    <h3>Arif Hossain</h3>
+                    <p>Full-Stack Developer & Java Developer</p>
                 </div>
+                <div class="footer-links">
+                    <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <div class="footer-social">
+                    <a href="https://github.com/arifhossain" class="social-link" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/arif-hossain-92b438206/" class="social-link" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="mailto:arif.s.hossain@outlook.com" class="social-link" target="_blank" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="tel:+46763209865" class="social-link" target="_blank" aria-label="Phone"><i class="fas fa-phone"></i></a>
+                </div>
+            </div>
+            <div class="footer-divider"></div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Arif Hossain. All rights reserved.</p>
             </div>
         </div>
     </footer>
