--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="home" class="hero">
         <div class="container">
             <header class="header">
-                <h1 class="section-title">Full-Stack Developer & Java Developer</h1>
+                <h1 class="section-title">Full-Stack Developer</h1>
             </header>
             <div class="hero-content">
                 <div class="hero-text">
@@ -576,6 +576,9 @@
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
                             <span>arif.s.hossain@outlook.com</span>
+                        </div>
+                        <div class="contact-item">
+                            <i class="fas fa-envelope"></i>
                             <span>arif.hossain@svt.se</span>
                         </div>
                         <div class="contact-item">
@@ -603,7 +606,7 @@
             <div class="footer-top">
                 <div class="footer-brand">
                     <h3>Arif Hossain</h3>
-                    <p>Full-Stack Developer & Java Developer</p>
+                    <p>Full-Stack Developer</p>
                 </div>
                 <div class="footer-links">
                     <a href="#home">Home</a>
