--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <p class="hero-description">
-                        I am a passionate Full-Stack Developer with expertise in Java and Frontend Development. 
-                        I enjoy building modern web applications using JavaScript, React, and Vue.js. 
-                        With a strong background in backend technologies like Spring Boot and Node.js, 
-                        I create efficient and scalable solutions.
+                        I'm a Full-Stack Developer with a strong focus on Java, Spring Boot, and modern 
+                        JavaScript frameworks like React and Vue.js. I care about writing clean code, 
+                        shipping features that work, and building apps that can grow with real users.
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View My Work</a>
